# pulumi-azure-ext-native

./: Makefile  README.md
deployment-templates/: .goreleaser.yml  README-DEPLOYMENT.md  release.yml
provider/: go.mod  go.sum  provider.go
provider/cmd/pulumi-resource-azure/: main.go
provider/pkg/provider/: provider.go
provider/pkg/provider/config/: config.go
provider/pkg/provider/time/: sleep.go  sleepController.go
sdk/dotnet/: Provider.cs  Pulumi.AzureExt.csproj  Random.cs  Utilities.cs  version.txt
sdk/dotnet/Certificate/: KeyVaultCertificate.cs
sdk/dotnet/Config/: Config.cs
sdk/dotnet/Time/: Sleep.cs
sdk/go/azure/: init.go  provider.go  random.go
sdk/go/azure/internal/: pulumiUtilities.go
sdk/go/provider/: doc.go  init.go  provider.go  pulumi-plugin.json
sdk/go/provider/certificate/: init.go  keyVaultCertificate.go
sdk/go/provider/config/: config.go
sdk/go/provider/internal/: pulumiUtilities.go
sdk/go/provider/time/: init.go  sleep.go
sdk/java/: README.md  build.gradle  settings.gradle
sdk/nodejs/: index.ts  package.json  provider.ts  random.ts  tsconfig.json
sdk/nodejs/certificate/: index.ts  keyVaultCertificate.ts
sdk/nodejs/config/: vars.ts
sdk/nodejs/time/: index.ts  sleep.ts
sdk/python/: pyproject.toml  setup.py
sdk/python/pulumi_azure/: __init__.py  provider.py  random.py
sdk/python/pulumi_azure_ext/: __init__.py  provider.py
sdk/python/pulumi_azure_ext/certificate/: __init__.py  key_vault_certificate.py
sdk/python/pulumi_azure_ext/config/: __init__.pyi  vars.py
tests/: go.mod  go.sum  provider_test.go
(+15 files in other folders)
